Added app icons, put UIlabels in launch screen

--- a/VirtualTourist/Base.lproj/LaunchScreen.storyboard
+++ b/VirtualTourist/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,39 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Virtual Tourist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kUn-gc-fjt">
+                                <rect key="frame" x="215" y="142" width="170" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Robert Garza" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EhL-cp-pkJ">
+                                <rect key="frame" x="249" y="281" width="102" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8v-9w-9od">
+                                <rect key="frame" x="282" y="315" width="36" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Oad-gt-xDM"/>
+                                    <constraint firstAttribute="width" constant="36" id="kse-rc-KLF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="EhL-cp-pkJ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="261" id="4Ot-2T-ZQ9"/>
+                            <constraint firstItem="kUn-gc-fjt" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HuA-u3-cZt"/>
+                            <constraint firstItem="kUn-gc-fjt" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="122" id="WxY-aZ-bfP"/>
+                            <constraint firstItem="Q8v-9w-9od" firstAttribute="centerX" secondItem="EhL-cp-pkJ" secondAttribute="centerX" id="c7E-d6-4za"/>
+                            <constraint firstItem="Q8v-9w-9od" firstAttribute="top" secondItem="EhL-cp-pkJ" secondAttribute="bottom" constant="13" id="gan-eK-DKG"/>
+                            <constraint firstItem="EhL-cp-pkJ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="v7Q-1F-jku"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
