--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1808" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -134,28 +134,14 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="b0t-hK-qFh" customClass="PhotoCellCVC" customModule="VirtualTourist" customModuleProvider="target">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="cell" id="b0t-hK-qFh">
                                                 <rect key="frame" x="0.0" y="0.0" width="137" height="120"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                     <rect key="frame" x="0.0" y="0.0" width="137" height="120"/>
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3oi-FY-UoG">
-                                                            <rect key="frame" x="0.0" y="0.0" width="137" height="120"/>
-                                                        </imageView>
-                                                    </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </view>
-                                                <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="3oi-FY-UoG" secondAttribute="bottom" id="2Uy-ZR-eZi"/>
-                                                    <constraint firstAttribute="trailingMargin" secondItem="3oi-FY-UoG" secondAttribute="trailing" constant="-8" id="avQ-xN-mdc"/>
-                                                    <constraint firstItem="3oi-FY-UoG" firstAttribute="top" secondItem="b0t-hK-qFh" secondAttribute="topMargin" constant="-8" id="cwc-Xz-gJt"/>
-                                                    <constraint firstItem="3oi-FY-UoG" firstAttribute="leading" secondItem="b0t-hK-qFh" secondAttribute="leadingMargin" constant="-8" id="qhf-mM-Xcu"/>
-                                                </constraints>
-                                                <connections>
-                                                    <outlet property="photoImage" destination="3oi-FY-UoG" id="apL-s4-d3P"/>
-                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
